# self-rag-training

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  ingest.py  logger_setup.py
src/chains/: critics.py  retrieval.py
src/graph/: nodes.py  state.py  workflow.py
src/utils/: llm_wrapper.py  prompts.py
